WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
302442
[IFC] inline box reports incorrect offsetHeight when no content on line
https://bugs.webkit.org/show_bug.cgi?id=302442
Summary
[IFC] inline box reports incorrect offsetHeight when no content on line
alan
Reported
2025-11-12 19:14:28 PST
ssia
Attachments
Patch
(6.85 KB, patch)
2025-11-12 19:26 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(6.85 KB, patch)
2025-11-13 17:42 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(24.30 KB, patch)
2025-11-14 09:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(24.64 KB, patch)
2025-11-15 15:29 PST
,
alan
no flags
Details
Formatted Diff
Diff
[fast-cq]Patch
(26.42 KB, patch)
2025-11-15 18:43 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(4)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-11-12 19:26:25 PST
Created
attachment 477383
[details]
Patch
alan
Comment 2
2025-11-13 17:42:09 PST
Created
attachment 477390
[details]
Patch
alan
Comment 3
2025-11-14 09:09:26 PST
Created
attachment 477396
[details]
Patch
alan
Comment 4
2025-11-15 15:29:52 PST
Created
attachment 477408
[details]
Patch
alan
Comment 5
2025-11-15 18:43:06 PST
Created
attachment 477411
[details]
[fast-cq]Patch
EWS
Comment 6
2025-11-16 05:29:59 PST
Committed
303091@main
(88502d8ee638): <
https://commits.webkit.org/303091@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477411
[details]
.
Radar WebKit Bug Importer
Comment 7
2025-11-16 05:30:16 PST
<
rdar://problem/164827777
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug